--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -583,19 +583,35 @@
         }
 
         .company-logo {
-            width: 32px;
-            height: 32px;
-            border-radius: 6px;
+            width: 36px;
+            height: 36px;
+            border-radius: 8px;
             object-fit: contain;
-            background: var(--bg-darker);
-            padding: 4px;
-            border: 1px solid var(--border-color);
+            background: #ffffff;
+            padding: 6px;
+            border: 2px solid var(--border-color);
             transition: all 0.3s ease;
+            filter: brightness(1) contrast(1.1);
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
         }
 
         .company-logo:hover {
             border-color: var(--primary-color);
-            box-shadow: 0 0 15px rgba(0, 212, 255, 0.3);
+            box-shadow: 0 0 20px rgba(0, 212, 255, 0.4), 0 4px 12px rgba(0, 0, 0, 0.15);
+            background: #f8f9fa;
+            transform: scale(1.08);
+        }
+
+        .company-logo.blackstone {
+            background: #1a1a1a;
+            border: 2px solid var(--primary-color);
+            padding: 8px;
+            filter: brightness(1.3) contrast(1.3);
+        }
+
+        .company-logo.blackstone:hover {
+            background: rgba(0, 212, 255, 0.15);
+            box-shadow: 0 0 20px rgba(0, 212, 255, 0.6), 0 4px 12px rgba(0, 0, 0, 0.15);
         }
 
         .timeline-description {
@@ -946,8 +962,13 @@
             }
 
             .company-logo {
-                width: 28px;
-                height: 28px;
+                width: 32px;
+                height: 32px;
+                padding: 4px;
+            }
+
+            .company-logo.blackstone {
+                padding: 6px;
             }
 
             .timeline-company {
@@ -1154,7 +1175,7 @@
                         <div class="timeline-date">Dec 2020 - Dec 2023</div>
                         <h3>Data Scientist & ML Engineer</h3>
                         <div class="timeline-company">
-                            <img src="assets/images/logo-blackstone.png" alt="BlackStone EIT Logo" class="company-logo">
+                            <img src="assets/images/logo-blackstone.png" alt="BlackStone EIT Logo" class="company-logo blackstone">
                             <span>BlackStone Eit - Seattle, WA</span>
                         </div>
                         <div class="timeline-description">
