--- a/index.html
+++ b/index.html
@@ -1033,7 +1033,7 @@
                 <a href="https://github.com/Mohamedballouch" target="_blank">
                     <i class="fab fa-github"></i>
                 </a>
-                <a href="mailto:ballouch.mo@gmail.com">
+                <a href="mailto:balmo@gmail.com">
                     <i class="fas fa-envelope"></i>
                 </a>
             </div>
