--- a/index.html
+++ b/index.html
@@ -175,19 +175,9 @@
             justify-content: center;
         }
 
-        /* Preloader */
+        /* Preloader - Temporarily disabled */
         .preloader {
-            position: fixed;
-            top: 0;
-            left: 0;
-            width: 100%;
-            height: 100%;
-            background: var(--bg-dark);
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 9999;
-            transition: opacity 0.3s ease, visibility 0.3s ease;
+            display: none !important;
         }
 
         .preloader.hidden {
@@ -671,6 +661,8 @@
             line-height: 1.6;
             overflow-x: hidden;
             position: relative;
+            visibility: visible !important;
+            opacity: 1 !important;
         }
 
         body::before {
